force-app/main/default/objects/TestProduct__c/TestProduct__c.object-meta.xml
<CustomObject>
    <label>TestProduct</label>
    <nameField>
        <label>TestProduct Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestProducts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>