force-app/main/default/objects/TestProduct__c/fields/AdminGraphqlApiId__c.field-meta.xml
<CustomField>
    <fullName>AdminGraphqlApiId__c</fullName>
    <label>AdminGraphqlApiId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>