force-app/main/default/objects/TestProduct__c/fields/Handle__c.field-meta.xml
<CustomField>
    <fullName>Handle__c</fullName>
    <label>Handle</label>
    <length>50</length>
    <type>Text</type>
</CustomField>