force-app/main/default/objects/TestProduct__c/fields/PublishedAt__c.field-meta.xml
<CustomField>
    <fullName>PublishedAt__c</fullName>
    <label>PublishedAt</label>
    <type>DateTime</type>
</CustomField>