force-app/main/default/objects/TestProduct__c/fields/PublishedScope__c.field-meta.xml
<CustomField>
    <fullName>PublishedScope__c</fullName>
    <label>PublishedScope</label>
    <length>50</length>
    <type>Text</type>
</CustomField>