force-app/main/default/objects/TestProduct__c/fields/ShopifyId__c.field-meta.xml
<CustomField>
    <fullName>ShopifyId__c</fullName>
    <label>ShopifyId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>