force-app/main/default/objects/TestProduct__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <length>50</length>
    <type>Text</type>
</CustomField>