force-app/main/default/objects/TestProduct__c/fields/TemplateSuffix__c.field-meta.xml
<CustomField>
    <fullName>TemplateSuffix__c</fullName>
    <label>TemplateSuffix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>